[package]
name = "x-kana"
version = "0.1.0"
authors = ["Ricardo B. Machado <ricardobm@gmail.com>"]
license = "MIT"
description = "Library for kana manipulation and fast translation between katakana, hiragana and romaji"
repository = "https://github.com/ricardobm/x-kana"
keywords = ["japanese", "kana"]
publish = false

[lib]
name = "x_kana"
path = "src/lib.rs"

[dependencies]
fnv = "1.0.6"
lazy_static = "1.4.0"

[[example]]
name = "cli"
path = "examples/cli.rs"

[dev-dependencies]
rustyline = "6.0"
