[package]
name = "kana"
version = "0.1.0"
authors = ["Ricardo B. Machado <ricardobm@gmail.com>"]
license = "MIT"
description = "Library for kana manipulation and fast translation between katakana, hiragana and romaji"
repository = "https://github.com/ricardobm/kana"
keywords = ["japanese", "kana"]
publish = false

[lib]
name = "kana"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
fnv = "1.0"
lazy_static = "1.4"

[[example]]
name = "cli"
path = "examples/cli.rs"

[dev-dependencies]
rustyline = "6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
